manifests/elk/filebeat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebeat
  namespace: elk
  labels:
    k8s-app: filebeat
spec:
  selector:
    matchLabels:
      k8s-app: filebeat
  template:
    metadata:
      labels:
        k8s-app: filebeat
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: worker01
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:8.9.2
        args: [
          "-c", "/etc/filebeat.yml",
          "-e",
        ]
        securityContext:
          runAsUser: 0
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: "/etc/filebeat.yml"
          readOnly: true
          subPath: filebeat.yml
        - name: nginx-log
          mountPath: "/var/log/nginx"
      volumes:
      - name: config
        configMap:
          defaultMode: 0640
          name: filebeat-config
      - name: nginx-log
        hostPath:
          path: /path
