manifests/elk/es-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: es-ingress
 namespace: elk
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: elastic.example.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: monitoring-es-http
           port:
             number: 9200
