manifests/elk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: kb-ingress
 namespace: elk
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
   nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
   nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
 rules:
 - host: kibana.example.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: kibana-kb-http
           port:
             number: 5601
